fixed the swiping carousel scroll on mobile! just added touch-action: none; on the css of the carousel

--- a/style.css
+++ b/style.css
@@ -382,6 +382,8 @@ section {
 	position: relative;
 	overflow: hidden;
 	transition: height 0.5s;
+	touch-action: none;
+	-ms-touch-action: none;
 }
 .carousel__inhalt-container {
 	display: flex;
